# astep-fw

./: .gitignore  Makefile  README.md  load.bat  load.ps1  load.sh
sw/: Makefile  README.md  astep-fsw.service  astep.py  astropixrun.py  fsw.py  fwTest.py  injection.py  main.py  pyproject.toml  requirements-beagle.txt  requirements.txt
sw/drivers/: configuration.py
sw/drivers/astep/: housekeeping.py  serial.py
sw/drivers/astropix/: asic.py  decode.py
sw/drivers/boards/: __init__.py  board_driver.py
sw/drivers/cmod/: __init__.py  injector.py
sw/drivers/gecco/: __init__.py
sw/scripts/: benchtest.py  benchtest_reversed_adapter.py  commands.py  hk_HVdown.py  hk_HVup.py  run_inj_autoread.py  run_inj_noAutoread.py
sw/scripts/cmod/: test_hk.py
sw/scripts/config/: W08Q05_allOn.yml  W08Q06_allOn.yml  W101Q08_allOn.yml  astep.xml  cmod.xml  config_quad_v3_opt.yml  gecco.xml  gecco4.xml  quadchip_allOff.yml  quadchip_allOn.yml  singlechip_r0c10.yml  singlechip_testconfig_v3.yml  singlechip_v4.yml  test_quadchip_allOn.yml
sw/scripts/debug/beagle/: read_fw_id.py
sw/scripts/debug/cmod/: read_firmware_version.py  test_hk.py  test_layer0_2spibytes.py
sw/scripts/debug/gecco/: read_firmware_id_ftdi.py  read_firmware_id_uart.py  test_astep_singleinjection.py  test_enable_ext_clock.py  test_layer0_2spibytes.py  test_singlechip_config.py  test_singlechip_inject.py  test_singlechip_srread.py
sw/src/astep_fsw/: astep.py  fwTest.py  main.py  rfg
sw/src/astep_fsw/drivers/astep/: __init__.py  (+2 more)
sw/ui_control_v1/: astep_ui_control_v1.py  mainwindow.ui  ui_layer_stats.py
(+104 files in other folders)
