[project]
name = "astep-fsw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Someones Name", email = "email@dot.com" }
]
requires-python = ">=3.9"
dependencies = [
    "async-timeout~=4.0",
    "bitstring~=3.1",
    "deprecated>=1.3.1",
    "ftd2xx>=1.3.8",
    "pandas>=2.3.3",
    "pyserial>=3.5",
    "pyyaml~=6.0",
    "regex>=2025.11.3",
    "tqdm~=4.64",
]

# The below creates `astep-fsw` cli, but that's not really necessary
# If we wanted the cli, then update the below once we figure out
# `main` disambiguation
#[project.scripts]
#astep-fsw = "astep_fsw:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
